fix(web): whack margin effecting text in dark mode

--- a/packages/web/src/app.css
+++ b/packages/web/src/app.css
@@ -24,7 +24,7 @@
 	}
 
 	* {
-		@apply dark:text-white;
+		@apply dark:text-white text-black;
 	}
 
 	a {
